remove excess spacing and correct issue with kaufman triangle appearing over title and subtitle

--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,6 @@
 
 .description__two-columns {
   width: 80%;
-  margin-bottom: 100px;
 }
 
 /* Two-columns Block styles */
@@ -300,6 +299,7 @@
   padding: 90px 0;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .kaufman__section-title {
@@ -313,14 +313,14 @@
 }
 
 .kaufman__table {
-  margin: 0 auto 90px;
+  margin: 0 auto;
 }
 
 .kaufman__triangle {
   position: absolute;
   right: -210px;
   top: 0px;
-  z-index: 0;
+  z-index: -1;
   height: 887px;
   width: 877px;
   background-image: url(../images/kaufman-triangle.svg);
@@ -338,6 +338,7 @@
   padding: 60px 0 40px;
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
 }
 
 .footer__columns {
